--- a/deploy/App.html
+++ b/deploy/App.html
@@ -27,6 +27,10 @@
             property: 'Blocked',
             operator: '=',
             value: true
+          }, {
+            property: 'DirectChildrenCount',
+            operator: '=',
+            value: 0
           }
         ],
         listeners: {
@@ -74,10 +78,10 @@
       storyTemplate = new Ext.Template('<span style="float:left;padding-left:5px;margin-top:10px;margin-bottom:5px">\
         <b><a href={ID_URL} target="_parent">{formattedID}</a> {storyName}</b> <br> \
 \
-        <img style="float:left;" src="{image_URL}"/> \
+        <img style="float:left;" src="{image_URL}" onmouseover="console.log(this);"/> \
         <div style="float:left;margin-left:10px;">\
           Blocked {blockedTime} by <a href={user_URL} target="_parent"> {userName} </a> <br>\
-          {blockedReason}\
+          {blockedReason} <br>\
         </div>\
       </span>');
       storyPanel = Ext.create('Ext.panel.Panel', {
